--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularProject</title>
+  <title>Elis Offerni - Some blog entries</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
